# vllm-metal

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench_client.sh  bench_serve.sh  build.rs  install.sh  mkdocs.yaml  pyproject.toml  repro_block_exhaustion.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  Makefile  README.md  cold_results.json  configuration.md  distributed-inference.md  distributed.md  gemma4_mtp.md  index.md  installation.md  lmcache_benchmark_results.md  lmcache_integration.md  memory-calculation-log.md  offload-architecture.mmd  offload-design.md  profiling.md  qwen35.md  requirements-docs.txt  rust_frontend.md  speculative_decoding.md  stt.md  supported_models.md  text_embedding_pooling.md  true_e2e_results.json  turboquant.md
docs/design/: prefix_cache_eviction.md
docs/source/: conf.py  index.md  installation.md  stt.md
examples/: lmcache_cold_bench.py  lmcache_metal_roundtrip.py  lmcache_true_e2e_bench.py  lora.py  short_conn.py  ttft_connector.py
research/: FINAL_REPORT.md  REPO_CROSS_VALIDATION.md
rust_ext/src/: lib.rs
scripts/: ci.sh  lib.sh  ray_verify.py  release.sh  test.sh
src/: lib.rs  paged_ops.rs  paged_ops_bridge.cpp  paged_ops_bridge.h
tests/: __init__.py  _rust_ext.py  conftest.py  kv_offload_helpers.py  stub_runner.py  test_attention.py  test_attention_dispatch.py  test_attention_sdpa.py  test_auto_memory.py  test_block_size_translation.py  test_cache.py  test_compat.py  test_config.py  test_dflash_model.py  test_dflash_proposer.py  test_draft_ingest_routing.py  test_draft_model_proposer.py  test_draft_prefix_cache.py  test_dspark_proposer.py  test_encoder_varlen_attention.py  test_envs.py  test_exaone4_golden.py  test_gdn_kernel.py  test_gdn_lazy_decode.py  test_gdn_lazy_kernels.py  test_gdn_lazy_wrapper.py  test_gemma4_golden.py  test_gemma4_mtp_assistant.py  test_gemma4_mtp_benchmark.py  test_gemma4_mtp_kv_sharing.py  test_gemma4_mtp_proposer.py  test_gemma4_sliding_window_dispatch.py  test_gguf.py  test_gguf_loader.py  test_gguf_loader_real.py  test_gguf_mlx_native.py  test_gguf_q8.py  test_gguf_serve_golden.py  test_gguf_vllm_integration.py  test_gguf_wrappers.py  (+87 more)
tests/attention/: test_hybrid_gdn_state_manager.py
tests/multimodal/: test_embeddings.py  test_feature_spec.py  test_import_boundaries.py  test_paddleocr_vl.py  test_qwen3_vl.py
tests/quant/: test_awq_alias_reject.py  test_awq_e2e_dense_matrix.py  test_awq_e2e_qwen25_15b.py  test_awq_loader.py  test_awq_loader_helpers.py  test_awq_repack_parity.py  test_awq_tied_lm_head_fixture.py
tools/: README.md  attention_bench_utils.py  avg_gen_length.py  awq_parity.py  bench_gdn_kernel.py  bench_prefix_caching.py  build_spec_bench_dataset.py  check_model_compat.py  check_sd_lossless.py  extract_glm47_mtp_head.py  gen_exaone4_golden.py  gen_gemma4_golden.py  gen_golden.py  gen_golden_token_ids.py  gen_golden_token_ids_for_deterministics.py  gen_qwen35_golden_tokens.py  gguf_serve_smoke.py  pp_lazy_rss.py  pp_parity_check.py  repro_block_exhaustion.py  smoke_ngram_sd_acceptance.py  spec_verify_window_bench.py  spec_window_bench.py  test_block_size_override.py  test_gpt_oss_smoke.py  test_ngram_spec_decode_e2e.py  test_qwen35_golden.py  test_qwen3_next_golden.py  test_spec_decode_draft_model_e2e.py  tq_bench.py
tools/benchmark/: attention_benchmark.py  gemma4_mtp_benchmark.py  native_mtp_benchmark.py  qwen35_vs_mlx.py  qwen3_vl_vision_varlen_benchmark.py
vllm_metal/: __init__.py  _compat.py  bootstrap.py  compat.py  config.py  envs.py  kv_cache_dtype.py  lmcache_integration.py  lmcache_kv_connector.py  metal_backend.py  mlx_sampler.py  model_runner.py  paged_attention_common.py  platform.py  server.py  utils.py  worker.py  yoco_fast_prefill.py
vllm_metal/attention/: __init__.py  backend.py  context.py  metal_attention.py  patching.py  synthetic_backend.py  yoco.py
vllm_metal/distributed/: __init__.py  pipeline.py
vllm_metal/gguf/: __init__.py  adapter.py  lifecycle.py  loader.py  mlx_native.py  q8.py  refs.py  source.py  tensor.py  vllm_integration.py  wrappers.py
vllm_metal/metal/: README.md  __init__.py  build.py  constants.py  gguf_ops.cpp  gguf_ops.h  linear_attention.py  mlx_ffi.cpp  mlx_ffi.h  paged_ops.cpp  paged_ops.rs  sync_profile.py
vllm_metal/metal/paged_ops_crate/: Cargo.toml  build.rs
vllm_metal/metal_kernel_backend/: attention_linear.py  attention_sdpa.py  attention_standard.py  cache.py  cache_linear.py  gdn_lazy.py  gdn_lazy_decode.py  kernel_loader.py  packed_prefill_compat.py  paged_attention.py  turboquant.py
vllm_metal/mlx/: __init__.py  attention.py  cache.py  device.py  norm.py  rope.py  tensor_bridge.py
vllm_metal/mlx_backend/: __init__.py  cache.py  gdn_cache.py  mla_cache.py  ops.py  paged_attention.py  paged_cache_adapter.py
vllm_metal/multimodal/: __init__.py  embeddings.py  feature_spec.py  fused_vit_attention.py
vllm_metal/ops/: __init__.py  activation.py  attention.py  cache.py  layernorm.py  rotary.py  sampling.py
vllm_metal/paged_attention_backend/: hybrid.py  mha.py  mla.py  protocol.py
vllm_metal/profiler/: __init__.py  wrapper.py
vllm_metal/pytorch_backend/: __init__.py  tensor_bridge.py  weight_converter.py
vllm_metal/quant/: __init__.py  awq_config.py  awq_loader.py
vllm_metal/stt/: __init__.py  api.py  audio.py  base.py  config.py  detection.py  formatting.py  hf_config.py  loader.py  policy.py  protocol.py  qwen3_asr.py  registry.py  runtime.py  serve.py  transcribe.py  whisper.py
vllm_metal/v1/: __init__.py  cache_policy.py  cache_utils.py  contiguous_cache.py  dflash_model.py  dflash_proposer.py  draft_model_proposer.py  dspark_proposer.py  gemma4_mtp.py  gemma4_mtp_constants.py  gemma4_mtp_model.py  hidden_state_tap.py  kv_connector.py  legacy_cache.py  lora.py  mlx_lm_paths.py  model_adapter.py  model_compat.py  model_lifecycle.py  model_runner.py  mps_model_runner.py  mtp_proposer.py  ngram_proposer.py  pooling.py  proposer.py  sampling.py  sampling_batch.py  sampling_utils.py  (+6 more)
(+106 files in other folders)
