[package]
name = "vllm-metal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Rust extension for vLLM Metal"

[lib]
name = "_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
