# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-metal"
version = "0.1.0"
description = "vLLM hardware plugin for Apple Silicon - unifies MLX and PyTorch under a single lowering path"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "vLLM Community"}
]
keywords = ["vllm", "metal", "mlx", "apple", "silicon", "mps", "llm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # MLX - Required for Apple Silicon GPU acceleration
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
    # Model loading and weights
    "transformers>=4.40.0",
    "accelerate>=0.26.0",
    "safetensors>=0.4.0",
    # Core utilities
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.12.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "vllm-metal[vllm,dev]",
]

[project.urls]
Homepage = "https://github.com/vllm-project/vllm-metal"
Repository = "https://github.com/vllm-project/vllm-metal"
Issues = "https://github.com/vllm-project/vllm-metal/issues"

# vLLM Plugin Entry Points
[project.entry-points."vllm.platform_plugins"]
metal = "vllm_metal:register"

[project.entry-points."vllm.general_plugins"]
metal_ops = "vllm_metal:register_ops"

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_metal*"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["extern"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict checks for out-of-tree plugin compatibility
disable_error_code = ["override", "misc", "assignment", "arg-type", "index", "call-arg", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
