# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vllm-metal"
version = "0.1.0"
description = "vLLM hardware plugin for Apple Silicon - unifies MLX and PyTorch under a single lowering path"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.14"
authors = [
    {name = "vLLM Community"}
]
keywords = ["vllm", "metal", "mlx", "apple", "silicon", "mps", "llm", "inference", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # MLX - Required for Apple Silicon GPU acceleration
    "mlx>=0.20.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.20.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.3.0; platform_system == 'Darwin' and platform_machine == 'arm64'",  # Vision-language model support
    # Model loading and weights
    "transformers>=4.40.0",
    "accelerate>=0.26.0",
    "safetensors>=0.4.0",
    # Core utilities
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    # Server dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vllm-metal = "vllm_metal.server:main"

[project.optional-dependencies]
vllm = ["vllm>=0.13.0"]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.19.1",
]
all = [
    "vllm-metal[vllm,dev]",
]

[project.urls]
Homepage = "https://github.com/vllm-project/vllm-metal"
Repository = "https://github.com/vllm-project/vllm-metal"
Issues = "https://github.com/vllm-project/vllm-metal/issues"

# vLLM Plugin Entry Points
[project.entry-points."vllm.platform_plugins"]
metal = "vllm_metal:register"

[project.entry-points."vllm.general_plugins"]
metal_ops = "vllm_metal:register_ops"

# Maturin configuration for mixed Rust/Python project
[tool.maturin]
# Build both the Rust extension and include Python source
features = ["pyo3/extension-module"]
# Include Python package in the wheel
python-source = "."
# Module name matches the Rust crate name
module-name = "vllm_metal._rs"
# Strip symbols for smaller binary
strip = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["extern", ".venv*", "test_vllm.py", "target"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "UP040"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict checks for out-of-tree plugin compatibility
disable_error_code = ["override", "misc", "assignment", "arg-type", "index", "call-arg", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: opt-in performance or long-running tests",
]
