# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vllm-metal"
version = "0.3.0"
description = "vLLM hardware plugin for Apple Silicon - unifies MLX and PyTorch under a single lowering path"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.14"
authors = [
    {name = "vLLM Community"}
]
keywords = ["vllm", "metal", "mlx", "apple", "silicon", "mps", "llm", "inference", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # MLX - Required for Apple Silicon GPU acceleration.
    # EXACT pin: the prebuilt _paged_ops.so links MLX private headers and
    # subclasses mlx::core::Primitive (mlx/backend/metal/device.h, etc.), and
    # libmlx.dylib carries no SONAME version (compatibility version 0.0.0), so
    # a wheel built against one MLX is only ABI-safe against that exact MLX.
    # Rebuild and re-release the wheel on every MLX bump.
    "mlx==0.31.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.31.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "llguidance>=1.7.0,<1.8.0; platform_machine == 'x86_64' or platform_machine == 'arm64' or platform_machine == 'aarch64' or platform_machine == 'ppc64le'",
    # mlx-vlm 0.6.2 includes PaddleOCR-VL multi-image M-RoPE fixes.
    "mlx-vlm>=0.6.2,<0.7.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Model loading and weights
    # Keep aligned with vLLM 0.24.0's Transformers lower bound.
    # Temporary cap: transformers 5.13.0 (released 2026-07-03) breaks MLX Metal
    # availability inside the vLLM process on GitHub's macOS runner VMs, so
    # platform resolution falls back to CPU. Verified A/B on the same runner:
    # 5.13.0 -> CpuPlatform, 5.12.1 -> MetalPlatform.
    # TODO: remove once the interaction is understood/fixed upstream.
    "transformers>=5.5.3,<5.13",
    "accelerate>=0.26.0",
    "safetensors>=0.4.0",
    # Native Metal extension JIT build
    "nanobind==2.10.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Core utilities
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    # Keep aligned with vLLM 0.24.0's FastAPI/Starlette lower bounds.
    # Temporary cap: fastapi>=0.137 adds a `_IncludedRouter` route type that
    # crashes vLLM's prometheus middleware (vllm-project/vllm#45597).
    # TODO: remove once we bump to a vLLM release that includes vllm#45629.
    "fastapi[standard]>=0.133.0,<0.137",
    "starlette>=1.0.1",
]

[project.optional-dependencies]
gguf = [
    # Local GGUF model loading. Keep aligned with upstream vLLM's lower bound
    # unless a Metal-specific path needs a newer API.
    "gguf>=0.17.0",
]
stt = [
    # Speech-to-text audio processing (Whisper models)
    "librosa>=0.10.2",
    "numba>=0.59.0",  # Required by librosa on Python 3.12+
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.19.1",
    "gguf>=0.17.0",
]
all = [
    "vllm-metal[gguf,stt,dev]",
]

[project.urls]
Homepage = "https://github.com/vllm-project/vllm-metal"
Repository = "https://github.com/vllm-project/vllm-metal"
Issues = "https://github.com/vllm-project/vllm-metal/issues"

# vLLM Plugin Entry Points
[project.entry-points."vllm.platform_plugins"]
metal = "vllm_metal:register"

# GGUF engine integration (vLLM 0.24 moved in-tree GGUF support to the
# CUDA/ROCm-only vllm-gguf-plugin; this restores the Metal-consumable layer).
# Loaded by vLLM in EngineArgs.__post_init__ and in the EngineCore/worker
# subprocesses; the target module stays importable without the `gguf` extra.
[project.entry-points."vllm.general_plugins"]
gguf_metal = "vllm_metal.gguf.vllm_integration:register"

# Maturin configuration for mixed Rust/Python project
[tool.maturin]
# Build both the Rust extension and include Python source
features = ["pyo3/extension-module"]
# Include Python package in the wheel
python-source = "."
# Module name matches the Rust crate name
module-name = "vllm_metal._rs"
# Strip symbols for smaller binary
strip = true
# Bundle the prebuilt Metal artifacts into the wheel. These are gitignored
# (*.so / *.metallib) so maturin's default git-tracked file walk skips them;
# listing them explicitly ships the prebuilt native extension at packaging
# time so the end-user machine never invokes clang++ at runtime.
include = ["vllm_metal/metal/*.metallib", "vllm_metal/metal/_paged_ops*.so"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["extern", ".venv*", "test_vllm.py", "target"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "UP040"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict checks for out-of-tree plugin compatibility
disable_error_code = ["override", "misc", "assignment", "arg-type", "index", "call-arg", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# By default, run all tests (including "slow"). Use `pytest -m "not slow"` for a
# fast loop (CI already does this).
markers = [
    "slow: opt-in performance or long-running tests",
]
